--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -7,7 +7,7 @@
    justify-content: space-between;
    align-items: center;
  }
-
+ 
  .header ul {
    display: flex;
    justify-content: space-between;
@@ -22,24 +22,15 @@
    color: white;
    text-decoration-line: none;
    font-family: 'Rajdhani';
-   font-size: 40px;
+   font-size: 30px;
    font-weight: 500;
    text-transform: uppercase;
- }
-
- @media (max-width: 500px) {
-  .header ul li a {
-    font-size: 25px;
-  }
-  .header ul li {
-    margin: 0;
-  }
  }
 
  .header .active {
    /*gras et souligné sur la page active*/
    text-decoration-line: underline;
-   text-shadow: 2px 0 0;
+   font-weight: bold;
  }
 
  .header ul li a:hover {
@@ -64,10 +55,22 @@
    z-index: 100000;
  }
 
- @media (max-width: 800px) {
-   .header__divLogo {
-     width: 75px;
-   }
+ @media (max-width: 900px) {
+  .header ul {
+    position: absolute;
+    top: 60px;
+  }
+  .header ul li a {
+    font-size: 20px;
+  }
+  .header ul li {
+    margin: 0;
+    padding-top: 5px;
+  }
+
+  .header__divLogo {
+    width: 75px;
+  }
  }
 
  .header__divLogo img {
